# server.js
@@ -23,7 +23,7 @@ app
 app.use('/', require('./routes/index'));
 app.use('/users', require('./routes/userRoutes'));
 app.use('/products', require('./routes/productRoutes'))
-app.use('/orders', require('./routes/orderRoutes'))
+
 
 
 app.use(notFound);
